# FLACHEAD

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/app/: Application.hpp
include/audio/: AudioPlayer.hpp
include/core/: Renderer.hpp
include/system/: Window.hpp
include/ui/: UI.hpp
src/: main.cpp
src/app/: Application.cpp  Application.hpp
src/audio/: AudioPlayer.cpp
src/core/: Renderer.cpp  Renderer.hpp  Time.cpp  Time.hpp
src/layout/: Layout.cpp  Layout.hpp  LayoutMetrics.hpp
src/math/: Color.cpp  Color.hpp  Rect.hpp  Vec2.hpp
src/screens/: HomeScreen.cpp  HomeScreen.hpp
src/system/: Window.cpp  Window.hpp
src/theme/: Sizes.hpp  Theme.hpp
src/ui/: Canvas.cpp  Canvas.hpp  UI.cpp
